--- a/project.config.json
+++ b/project.config.json
@@ -8,10 +8,11 @@
 		"es6": true,
 		"postcss": true,
 		"minified": true,
-		"newFeature": true
+		"newFeature": true,
+		"autoAudits": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.3.0",
+	"libVersion": "2.2.5",
 	"appid": "wx9b91225c98e714b7",
 	"projectname": "Applets_remote_hometown",
 	"debugOptions": {
